# DexterousHands

./: .gitignore  CNAME  LICENSE  README.md  _config.yml  index.md  jekyll-theme-dinky.gemspec  requirements.txt  setup.py
assets/urdf/xarm_description/: CMakeLists.txt  package.xml  readme.md
assets/urdf/xarm_description/allegro_hand_model/: CHANGELOG.rst  CMakeLists.txt  package.xml
assets/urdf/xarm_description/launch/: display.rviz  lite6_rviz_display.launch  lite6_upload.launch  xarm5_rviz_display.launch  xarm5_upload.launch  xarm6_rviz_display.launch  xarm6_upload.launch  xarm7_rviz_display.launch  xarm7_upload.launch
assets/urdf/xarm_description/srdf/: _lite6_macro.srdf.xacro  _xarm5_macro.srdf.xacro  _xarm6_macro.srdf.xacro  _xarm7_macro.srdf.xacro  dual_xarm.srdf.xacro  xarm.srdf.xacro  xarm_macro.srdf.xacro
assets/urdf/xarm_description/urdf/: camera.gazebo.xacro  common.gazebo.xacro  dual_xarm6_robot.urdf.xacro  lite6.gazebo.xacro  lite6.transmission.xacro  lite6.urdf.xacro  lite6_robot.urdf.xacro  lite6_robot_macro.xacro  lite_gripper.urdf.xacro  lite_vacuum_gripper.urdf.xacro  other_geometry.urdf.xacro  xarm5.gazebo.xacro  xarm5.transmission.xacro  xarm5.urdf.xacro  xarm5_robot.urdf.xacro  xarm5_robot_macro.xacro  xarm5_with_gripper.xacro  xarm5_with_vacuum_gripper.xacro  xarm6 (copy).urdf  xarm6.gazebo.xacro  xarm6.transmission.xacro  xarm6.urdf  xarm6.urdf.xacro  xarm6_robot.urdf.xacro  xarm6_robot_macro.xacro  xarm6_with_gripper.xacro  xarm6_with_vacuum_gripper.xacro  xarm7.gazebo.xacro  xarm7.transmission.xacro  xarm7.urdf.xacro  xarm7_robot.urdf.xacro  xarm7_robot_macro.xacro  xarm7_with_gripper.xacro  xarm7_with_vacuum_gripper.xacro  xarm_vacuum_gripper.urdf.xacro
bi-dexhands/: train.py  train_rlgames.py
(+1319 files in other folders)
